# CodeLens

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
codelens/: __init__.py  __main__.py  diff.py  insights.py  mcp.py
docs/: enrichment-spec.md
examples/: bench_accuracy.py  bench_assembly.py  enrichment_graphify_pkg.json  github-pr-report.yml
lensme/: __init__.py  __main__.py  build.py  cbm_adapter.py  diff.py  insights.py  mcp.py  merge.py  registry.py  report.py
ontomap/: __init__.py  __main__.py  build.py  diff.py  insights.py  mcp.py
tests/: test_build.py  test_cbm_adapter.py  test_insights.py  test_mcp.py  test_registry.py  test_report.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  DetailPanel.tsx  Search.tsx  Sidebar.tsx  Toolbar.tsx  folderLayout.ts  layout.ts  nodes.tsx  store.ts  styles.css  types.ts
