[project]
name = "codelens"
version = "0.1.0"
description = "Infer a C4-style ontology (Product > Feature > Component > Module > File) from a graphify graph.json"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
codelens = "codelens.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["codelens*"]
