[project]
name = "lensme"
version = "0.1.0"
description = "C4-style architecture map inferred from graphify's code graph - deterministic skeleton, honest confidence tags, agent-queryable via MCP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []
authors = [{name = "yoonhwan"}]
keywords = ["architecture", "c4", "code-map", "ontology", "graphify", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
]

[project.urls]
Repository = "https://github.com/yoon-py/lensme"

[project.scripts]
lensme = "lensme.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lensme*"]

# release step copies the built UI in: cp -r ui/dist lensme/ui_dist
[tool.setuptools.package-data]
lensme = ["ui_dist/**/*"]
